<resources>
    <string name="app_name">FavDash</string>
    <string name="title_all_dishes">All Dishes</string>
    <string name="title_favorite_dishes">Favorite</string>
    <string name="title_random_dish">Random Dish</string>
    <string name="splash_screen_title">Fav Dish</string>
    <string name="add_dish">Add Dish</string>
    <string name="lbl_add_dish">ADD DISH</string>
    <string name="image_contentDescription">image</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_type">Type</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_ingredients">Ingredients</string>
    <string name="lbl_cooking_time_in_minutes">Cooking Time In Minutes</string>
    <string name="lbl_direction_to_cook">Direction to Cook</string>

    <string name="title_select_image_action">Select Image Action</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>

    <string name="title_select_dish_type">SELECT DISH TYPE</string>
    <string name="title_select_dish_category">SELECT DISH CATEGORY</string>
    <string name="title_select_dish_cooking_time">SELECT COOKING TIME IN MINUTES</string>

    <string name="err_msg_select_dish_image">Select dish image.</string>
    <string name="err_msg_enter_dish_title">Enter dish title</string>
    <string name="err_msg_enter_dish_type">Enter dish type</string>
    <string name="err_msg_enter_dish_category">Enter dish category</string>
    <string name="err_msg_enter_dish_ingredients">Enter dish Ingredients</string>
    <string name="err_msg_enter_dish_cooking_time">Enter dish cooking time</string>
    <string name="err_msg_enter_dish_cooking_instructions">Enter dish cooking instructions</string>
    <string name="all_the_entries_are_valid">All the entries are valid</string>
    <string name="label_no_dishes_added_yet">No dishes add yet!!!</string>

</resources>