<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    tools:context=".view.activities.AddUpdateDishActivity" >

   <androidx.appcompat.widget.Toolbar
       android:id="@+id/toolbar_add_dish_activity"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="?attr/colorPrimary"
       android:minHeight="?attr/actionBarSize"
       android:theme="?attr/actionBarTheme"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:fillViewport="true"
       android:scrollbars="none"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/toolbar_add_dish_activity">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintVertical_chainStyle="spread_inside">

         <FrameLayout
             android:id="@+id/fl_select_image"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_200sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_dish_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dish_image_background"
                android:scaleType="fitXY"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/image_contentDescription" />

            <ImageView
                android:id="@+id/iv_add_dish_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:padding="@dimen/_20sdp"
                app:srcCompat="@drawable/ic_add_a_photo"
                android:contentDescription="@string/image_contentDescription" />

         </FrameLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_tile"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_16sdp"
             android:layout_marginEnd="@dimen/_16sdp"
             android:hint="@string/lbl_title"
             app:hintTextColor="@color/blue_gray_700"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/fl_select_image">

            <EditText
                android:id="@+id/id_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/gray_900"
                android:textSize="@dimen/_15sdp"
                android:autofillHints="@string/lbl_title"
                tools:ignore="LabelFor" />
         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_type"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_16sdp"
             android:layout_marginEnd="@dimen/_16sdp"
             android:hint="@string/lbl_type"
             app:hintTextColor="@color/blue_gray_700"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/til_tile">

            <EditText
                android:id="@+id/id_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textColor="@color/gray_900"
                android:textSize="@dimen/_15sdp"
                android:autofillHints="@string/lbl_title" />

         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_category"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_16sdp"
             android:layout_marginEnd="@dimen/_16sdp"
             android:hint="@string/lbl_category"
             app:hintTextColor="@color/blue_gray_700"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/til_type">

            <EditText
                android:id="@+id/id_categorie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/gray_900"
                android:textSize="@dimen/_15sdp"
                android:autofillHints="@string/lbl_title" />

         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_ingredients"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_16sdp"
             android:layout_marginEnd="@dimen/_16sdp"
             android:hint="@string/lbl_ingredients"
             android:gravity="start"
             app:hintTextColor="@color/blue_gray_700"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/til_category"
             app:layout_constraintBottom_toTopOf="@id/til_cooking_time">

            <EditText
                android:id="@+id/id_ingredients"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:inputType="text"
                android:textColor="@color/gray_900"
                android:textSize="@dimen/_15sdp"
                android:autofillHints="@string/lbl_title" />

         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_cooking_time"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_16sdp"
             android:layout_marginEnd="@dimen/_16sdp"
             android:hint="@string/lbl_cooking_time_in_minutes"
             android:gravity="start"
             app:hintTextColor="@color/blue_gray_700"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/til_ingredients">

            <EditText
                android:id="@+id/id_cooking_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/gray_900"
                android:textSize="@dimen/_15sdp"
                android:autofillHints="@string/lbl_title" />

         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_direction_to_cook"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_16sdp"
             android:layout_marginEnd="@dimen/_16sdp"
             android:hint="@string/lbl_direction_to_cook"
             android:gravity="start"
             app:hintTextColor="@color/blue_gray_700"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/til_cooking_time">

            <EditText
                android:id="@+id/id_direction_to_cook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/gray_900"
                android:textSize="@dimen/_15sdp"
                android:autofillHints="@string/lbl_title" />

         </com.google.android.material.textfield.TextInputLayout>

         <Button
             android:id="@+id/button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/lbl_add_dish"
             android:textColor="@color/white"
             android:background="@color/primary_color"
             android:layout_margin="@dimen/_16sdp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/til_direction_to_cook"
             app:layout_constraintBottom_toBottomOf="parent"/>

      </androidx.constraintlayout.widget.ConstraintLayout>
   </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
